<resources>
    <string name="app_name">My Gym Application</string>
    <string name="select_target_activity_title">Choose your goal</string>
    <string name="checkbox_strength_header">Strength</string>
    <string name="checkbox_strength_description">Exercises to increase muscle strength</string>
    <string name="checkbox_mass_header">Mass</string>
    <string name="checkbox_mass_description">Exercises to increase muscle mass</string>
    <string name="checkbox_weight_loss_header">Weight loss</string>
    <string name="checkbox_weight_loss_description">Exercises that will help you lose weight</string>
    <string name="checkbox_stamina_header">Endurance</string>
    <string name="checkbox_stamina_description">exercises to increase your endurance</string>
    <string name="checkbox_line_header">Line</string>
    <string name="checkbox_line_description">Exercises for a perfect body line</string>
    <string name="checkbox_local_fat_header">Local fat</string>
    <string name="checkbox_local_fat_description">Remove local fat with these exercises</string>
    <string name="checkbox_flexibility_header">Flexibility</string>
    <string name="checkbox_flexibility_description">Exercises to improve your flexibility</string>
    <string name="select_target_btn_confirm_selections">Select</string>
    <string name="select_target_btn_reset_selections">Reset</string>
    <string name="select_muscle_activity_title">Select muscles to train</string>
    <string name="checkbox_biceps_header">Biceps</string>
    <string name="checkbox_biceps_description">Exercises for your biceps muscles</string>
    <string name="checkbox_chest_header">Chest</string>
    <string name="checkbox_chest_description">Improve your chest muscles</string>
    <string name="checkbox_triceps_header">Triceps</string>
    <string name="checkbox_triceps_description">Train your triceps</string>
    <string name="checkbox_back_header">Back</string>
    <string name="checkbox_back_description">Train all your back muscles</string>
    <string name="checkbox_shoulders_header">Shoulders</string>
    <string name="checkbox_shoulders_description">Shoulders and arm muscles</string>
    <string name="checkbox_abs_header">ABS</string>
    <string name="checkbox_abs_description">Abdominal muscles</string>
    <string name="checkbox_legs_header">Legs</string>
    <string name="checkbox_legs_description">Select to train all your legs muscles</string>
    <string name="checkbox_full_body_header">Full body</string>
    <string name="checkbox_full_body_description">Get exercises for all body</string>
    <string name="biceps_description_exercise_1">Concentration Curl Biceps Exercise — [Step-by-Step Technique] Step 1: Sit on the end of a bench, with a shoulder width foot stance. Brace your non-curling arm against your knee. Step 2: Hold the weight in your curling arm, with your arm fully stretched and your elbow touching against the inside of your knee. Step 3: Alternating arms, curl the weight up across your body, supinating your hand as you curl (pinky twisting out) and concentrating the squeeze in your biceps. Step 4: At the top of the movement, get a peak contraction by squeezing as hard as you can. Step 5: Keep your elbow against your knee throughout the movement, work at a 2 sec up, 3 sec down tempo. Step 6: Complete on each arm for the prescribed number of reps. ** Pro Tip: We recommend starting with 3 sets of 12-15 reps (each arm). **</string>
    <string name="biceps_description_exercise_2">TRX band exercises can be easily done from the comfort of your own home. This exercise is simple and can be added to your existing TRX arm workout. The TRX biceps curl can be done in 4 easy steps: Step 1: Ensure the TRX suspension is secured firmly at an elevated position. Grasp the handles with each hand, palms up and facing you. Step 2: Lean back with your feet together. Maintain a neutral position with your spine for the entire lift. Step 3: Using your biceps, bend your elbows and bring your body all the way to the handles. Step 4: LOWER YOURSELF BACK DOWN AND REPEAT.</string>
    <string name="chest_description_exercise_1">The dumbbell bench press is an awesome chest exercise that will help you build a great looking chest and overall physique. Doing the press with dumbbells is also much safer for your shoulders than using a barbell, because the dumbbell allows your arms to move in a more natural arc throughout the pressing motion. Doing the dumbbell bench press will also help build the stabilizer muscles in your shoulder that will make your shoulders functionally strong and will help you to avoid injury. Take a look at our dumbbell bench press form tutorial below where I guide you through the exercise and outline the main technique points of how to do a perfect dumbbell press. If you need something to print off and take to the gym as a reminder, the step-by-step exercise technique is further down this page. • Step 1: Sit on the end of a bench with the dumbbells resting on your thighs, holding them with a strong grip in the centre of the dumbbell grip. • Step 2: Lower yourself back and bring the dumbbells onto your chest, facing each other. • Step 3: Press the dumbbells up, so they are over your chest and your arms are almost straight. Twist your hands so your thumbs are side by side. • Step 4: Breathing in, slowly lower the dumbbells to a 2 count, so they reach a point in line with your nipples and your arms are just below 90 degrees. • Step 5: Breathing out and leading with your pinky finger, press the dumbbells back up to the start point, with your arms slightly bent. • Step 6: Repeat the dumbbell bench press for the prescribed number of reps. ** Pro Tip: We recommend starting 3 sets of 15-20 reps for the dumbbell bench press.**</string>
    <string name="chest_description_exercise_2">TRX Push-Ups — [Step-by-Step Technique] Step 1: Adjust the height of your suspension hoops to match the level of your knees. The higher the hoops, the easier the TRX push-up will be. Step 2: Take one hoop in each hand and make sure your shoulders are in line with your wrists. This will help to prevent shoulder injuries when completing the move. Move your legs behind you until your body is straight. This should be approximately a 45° angle to the floor. Step 3: Squeeze your abs and glutes to ensure your hips don’t sag. This is the starting position. Now slowly lower your body by bending your elbows. Do not get your body lower than your hands; you are likely to damage your shoulders. Step 4: Once you’ve completed the downward move you can lift your body back up by extending your arms. ** Pro Tip #1: To make it more difficult, squeeze your arms together at the elevated position. Push them back out before dropping down again. ** Pro Tip #2: Keep the action smooth or you’ll start spinning on the suspension cables and lose your balance. ** Pro Tip #3: It is essential to keep your spine straight while doing the TRX push-up. This will ensure you have proper form and are working the right muscles. ** Pro Tip #4: Focus on your core as you complete this exercise; you’ll feel the burn and the benefit.</string>
    <string name="chest_description_exercise_3">Use a stopwatch, a watch with a second hand or a phone app to track your time. Make sure you are completing full Push-Ups by dropping your elbows to a 90-degree angle at the bottom. Lock your arms out at the top and keep your abs and glutes tight throughout the movement.
\n•	Perform 10 Push-Ups
\n•	Rest 10 seconds
\n•	Perform nine Push-Ups
\n•	Rest nine seconds
\n•	Repeat this pattern all the way to the bottom of the pyramid (one Push-Up)\n
You will perform a total of 55 Push-Ups. The lactic acid will be burning throughout your upper body, much more so than what many athletes experience after an hour in the gym.
Continue performing this routine until you can start the pyramid at 20 Push-Ups and work your way down to one. The result will be a powerful upper body that translates onto the court, field or track for any sport.
</string>
    <string name="triceps_description_exercise_1">The dumbbell French press is an amazing exercise for increasing the size and strength in your triceps and is one of the only exercises to work all 3 heads of the triceps muscle. This exercise is also known as the lying French press or the skull crushers dumbbell exercise. All three of these exercises are a lying triceps press. Adding dumbbell skull crushers into your workout routine will help you to increase muscle mass and therefore the size of your arms. The main things to focus on when you do this exercise relate to the position of your upper arm. The first is to keep your elbows tight into your side, so they do not flare out. The second is to make sure your upper arm stays at 90 degrees to your body and doesn’t drop back over your head. This will take tension away from your triceps, resulting in a less effective squeeze. Lying Dumbell French Press — [Step-by-Step Technique] Step 1: Start by lying on a bench, holding a dumbbell in each hand, with them resting on your chest. Step 2: Press the dumbbells straight up in front of you and squeeze the handles. Step 3: Breathing in, slowly lower the dumbbells down, flexing at your elbow and keeping your elbows in tight. The dumbbells will stop just outside your ears. Step 4: Breathing out, press the dumbbells back up to the start position, flexing your triceps at the top and continuing to squeeze the dumbbells. ** Pro Tip #1: We recommend you start with 3 sets of 12-15 reps. ** Pro Tip #2: Using dumbbells instead of a barbell is healthier for your elbows, so for safety, we recommend this exercise as a start.</string>
    <string name="triceps_description_exercise_2">The TRX tricep extension is the best body weight triceps exercise for building muscle. This TRX triceps exercise is great to add to the end of your workout as your tricep workout finisher. Follow this video tutorial to start building your triceps today. TRX Tricep Extension — [Step-by-Step Technique] Step 1: Start with your back to the suspension trainer and take a handle over each shoulder with your grip on the main handle attachment. Step 2: Place your hands out in front of you so your arms are straight, then walk your feet back to a point where you feel the tension on your arms. Step 3: Breathing in and holding your neutral body position (head, shoulder, hips, knees, and ankles in line), slowly lower yourself forwards by bending your arms. The back of your hand should go towards your forehead. Step 4: Breathing out, press yourself back up into the start position, making sure to squeeze your triceps at the top of the movement. Step 5: Repeat steps 3 and 4 for the prescribed number of reps, then rest before completing your next set. ** Pro Tip #1: To start, complete this exercise with 2-3 sets of 10-15 reps. ** Pro Tip #2: Use this exercise within a functional training session, to make the most of the core stability work needed to control your body position.</string>
</resources>