<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMuscleActivity">

    <CheckBox
        android:id="@+id/checkbox_biceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_biceps_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_biceps_header" />

    <TextView
        android:id="@+id/checkbox_biceps_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_biceps_header"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkbox_biceps_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_biceps_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_biceps_header" />


    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_biceps_description" />

    <CheckBox
        android:id="@+id/checkbox_chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_chest_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_chest_header" />

    <TextView
        android:id="@+id/checkbox_chest_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_chest_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_chest_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_chest_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_chest_header" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_chest_description" />

    <CheckBox
        android:id="@+id/checkbox_triceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_triceps_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_triceps_header" />

    <TextView
        android:id="@+id/checkbox_triceps_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_triceps_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_triceps_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_triceps_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_triceps_header" />

    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_triceps_description" />

    <CheckBox
        android:id="@+id/checkbox_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_back_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_back_header" />

    <TextView
        android:id="@+id/checkbox_back_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_back_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_3"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_back_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_back_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_back_header" />

    <View
        android:id="@+id/divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_back_description" />

    <CheckBox
        android:id="@+id/checkbox_shoulders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_shoulders_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_shoulders_header" />

    <TextView
        android:id="@+id/checkbox_shoulders_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_shoulders_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_4"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_shoulders_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_shoulders_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_shoulders_header" />

    <View
        android:id="@+id/divider_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_shoulders_description" />

    <CheckBox
        android:id="@+id/checkbox_abs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_abs_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_abs_description" />

    <TextView
        android:id="@+id/checkbox_abs_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_abs_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_5"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_abs_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_abs_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_abs_header" />

    <View
        android:id="@+id/divider_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_abs_description" />

    <CheckBox
        android:id="@+id/checkbox_legs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_legs_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_legs_description" />

    <TextView
        android:id="@+id/checkbox_legs_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_legs_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_6"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_legs_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_legs_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_legs_header" />

    <View
        android:id="@+id/divider_7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_legs_description" />

    <CheckBox
        android:id="@+id/checkbox_full_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_full_body_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_full_body_description" />

    <TextView
        android:id="@+id/checkbox_full_body_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_full_body_header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider_7"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/checkbox_full_body_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/checkbox_full_body_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_full_body_header" />

    <View
        android:id="@+id/divider_8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_full_body_description" />

    <Button
        android:id="@+id/select_muscle_btn_confirm_selections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/select_target_btn_confirm_selections"
        app:layout_constraintTop_toBottomOf="@id/divider_8"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/select_muscle_btn_reset_selections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_target_btn_reset_selections"
        app:layout_constraintTop_toBottomOf="@id/divider_8"
        app:layout_constraintEnd_toStartOf="@+id/select_muscle_btn_confirm_selections"/>

</androidx.constraintlayout.widget.ConstraintLayout>